--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -227,8 +227,9 @@
         <div class="card--3D-horizontal" style="justify-content: center;">
             <img class="card--imgsquare" src="{{ asset(sImgPath ~'homepage/luggages.jpg') }}" alt="Photo d'une vignette VMDTR">
             <p class="col-md-12 col-lg-8">
-                Les motos sont équipées d'un porte-paquet permettant le transport d'une valise cabine,
+                Les motos sont bien souvent équipées d'un porte-paquet permettant le transport d'une valise cabine,
                 d'une scoche d'ordinateur portable...
+                N'hésitez pas à communiquer avec le pilote sur votre besoin et ses possibilités.
             </p>
         </div>
     </section>
