--- a/templates/driver/driverspresentation.html.twig
+++ b/templates/driver/driverspresentation.html.twig
@@ -9,14 +9,18 @@
 
 <section class="paragraph--large">
 {% if drivers is defined and drivers|length > 0 %}
-    
+
+    <!-- Récupère les OBJETS issus de JSON pour les Regions et Depts -->
+    {% set regions=getregions() %}
+    {% set depts=getdepartments() %}
+
     <!-- Boucle 1 : boucle d'analyse pour comptage et détermination du comportement WRAP -->
     {% set counter=0 %}
     {% for oDriver in drivers %}
         {% set oUser=oDriver.user %}
         {% set oCompany=oDriver.company %}
         {% set oDept=getdepartmentbycode(oCompany.zip|slice(0,2)) %}
-        {% set oRegion=getregionbycode(oDept.region_code) %}
+        {# --- #}
         {% if oCompany.isconfirmed 
             and (region is null or region.code==oDept.region_code)
             and (dept is null or dept is not defined or dept.code==oCompany.zip|slice(0,2))
@@ -25,62 +29,59 @@
         {% endif %}
     {% endfor %}
 
-
-    {% if counter > 0 %}
-    
-        {% set regions=getregions() %}
-        {% set depts=getdepartments() %}
-
-        {% if region is not null %}
-            {% set region=getregionbycode(region) %}
-        {% endif %}
-        {% if dept is not null %}
-            {% set dept=getdepartmentbycode(dept) %}
-        {% endif %}
-
-        <form class="d-flex flex-row mt-4 mb-4" method="post">
-            <div class="d-flex flex-row align-items-center">
-                <h2 class="title--h2">Les pilotes...</h2>
-                &emsp;
-                <!-- DEBUT buttons sélection filtre Region/Dept. -->
-                <div class="d-flex flex-row">
-                    <div class="btn-group dropdown" name="region">
-                        <button class="btn btn-sm btn--secondary dropdown-toggle ml-2" type="button" id="dropdownMenuOffset--Region" data-toggle="dropdown">
-                            Région 
-                            {% if region %}
-                                {{ ' ('~region.name~')' }}
-                            {% endif %}
+    <!-- ##### v DEBUT BOUTON FILTRAGE PAR REGION/DEPARTEMENT v ##### -->
+    <!-- -------  (méthode "Submit" PHP, pas Javascript ...)  ------- -->
+    <form class="d-flex flex-row mt-4 mb-4" method="post">
+        <div class="d-flex flex-row align-items-center">
+            <h2 class="title--h2">Les pilotes...</h2>
+            &emsp;
+            <!-- DEBUT buttons sélection filtre Region/Dept. -->
+            <div class="d-flex flex-row">
+                <!-- ... régions -->
+                <div class="btn-group dropdown" name="region">
+                    <button class="btn btn-sm btn--secondary dropdown-toggle ml-2" type="button" id="dropdownMenuOffset--Region" data-toggle="dropdown">
+                        Région 
+                        {% if region %}
+                            {{ ' ('~region.name~')' }}
+                        {% endif %}
+                    </button>
+                    <div class="dropdown-menu">
+                        <button class="dropdown-item" type="submit" name="region" value="all">TOUTES</button>
+                        <div class="dropdown-divider"></div>
+                        {% for obRegion in regions %}
+                        <button class="dropdown-item" type="submit" name="region" value="{{ obRegion.code }}"
+                            {% if region and region.name==obRegion.name %}selected="selected"{% endif %}
+                        >
+                            {{ obRegion.name }}
                         </button>
-                        <div class="dropdown-menu">
-                            <button class="dropdown-item" type="submit" name="region" value="all">TOUTES</button>
-                            <div class="dropdown-divider"></div>
-                            {% for region in regions %}
-                            <button class="dropdown-item" type="submit" name="region" value="{{ region.code }}">{{ region.name }}</button>
-                            {% endfor %}
-                        </div>
-                    </div>
-                    <div class="btn-group dropdown">
-                        <button class="btn btn-sm btn--secondary dropdown-toggle ml-2" type="button" id="dropdownMenuOffset--Department" data-toggle="dropdown">
-                            Dépt.
-                            {% if dept %}
-                                {{ ' ('~dept.name~')' }}
-                            {% endif %}
-                        </button>
-                        <div class="dropdown-menu">
-                            <button class="dropdown-item" type="submit" name="dept" value="all">TOUS</button>
-                            <div class="dropdown-divider"></div>
-                            {% for dept in depts %}
-                                {% if region is null or dept.region_code==region.code %}
-                            <button class="dropdown-item" type="submit" name="dept" value="{{ dept.code }}">{{ dept.name~' ('~dept.code~')' }}</button>
-                                {% endif %}
-                            {% endfor %}
-                        </div>
+                        {% endfor %}
                     </div>
                 </div>
-                <!-- FIN buttons sélection filtre Region/Dept. -->
+                <!-- ... départements -->
+                <div class="btn-group dropdown">
+                    <button class="btn btn-sm btn--secondary dropdown-toggle ml-2" type="button" id="dropdownMenuOffset--Department" data-toggle="dropdown">
+                        Dépt.
+                        {% if dept %}
+                            {{ ' ('~dept.name~')' }}
+                        {% endif %}
+                    </button>
+                    <div class="dropdown-menu">
+                        <button class="dropdown-item" type="submit" name="dept" value="all">TOUS</button>
+                        <div class="dropdown-divider"></div>
+                        {% for dept in depts %}
+                            {% if region is null or dept.region_code==region.code %}
+                        <button class="dropdown-item" type="submit" name="dept" value="{{ dept.code }}">{{ dept.name~' ('~dept.code~')' }}</button>
+                            {% endif %}
+                        {% endfor %}
+                    </div>
+                </div>
             </div>
-        </form>
+            <!-- FIN buttons sélection filtre Region/Dept. -->
+        </div>
+    </form>
+    <!-- ##### ^ FIN BOUTON FILTRAGE PAR REGION/DEPARTEMENT ^ ##### -->
 
+    {% if counter > 0 %}
         <div class="d-flex flex-row flex-wrap">
         <!-- Boucle 2 : boucle "active" -->
         {% for oDriver in drivers %}
@@ -93,15 +94,16 @@
                 and (region is null or region.code==oDept.region_code)
                 and (dept is null or dept is not defined or dept.code==oCompany.zip|slice(0,2))
             %}
-            {% if counter > 2 %}
+            
+            <!-- ##### v DEBUT CARTE PILOTE v ##### -->
+                {% if counter > 2 %}
             <div class="card--3D-vertical col-12 col-md-3" style="min-width:18em;max-width:40em;">
-            {% elseif counter == 2 %}
+                {% elseif counter == 2 %}
             <div class="card--3D-vertical col-12 col-md-5" style="min-width:16em;max-width:50em;">
-            {% elseif counter == 1 %}
+                {% elseif counter == 1 %}
             <div class="card--3D-vertical col-12" style="min-width:10em;max-width:40em;">
-            {% endif %}
+                {% endif %}
                 <div class="card--vertical pb-5">
-
                     <!-- 1ère rangée : chauffeur -->
                     <div class="d-flex flex-row flex-wrap mb-1"
                         style="width:95%;justify-content:space-between;"
@@ -130,7 +132,6 @@
                             <small>{{ 'Nb de courses effectuées : XXX' }}</small>
                         </div>
                     </div>
-
                     <!-- 2nde rangée : photo carte VMDTR -->
                     {% set oVMDTR=getdrivercard(oUser) %}
                     {% if oVMDTR %}
@@ -138,7 +139,6 @@
                     {% else %}                    
                     <img style='width:95%;' src="{{ asset(sImgPath ~'no-image.png') }}" alt="Carte VMDTR">
                     {% endif %}
-
                     <!-- 3ème rangée : Bloc Company -->
                     <div class="mt-2" style='width:95%;'>
                         <h5 class="mt-1" style='font-weight:bolder;'>{{ oCompany.name }}</h5>
@@ -146,7 +146,6 @@
                         <h6>{{ 'Domiciliation sur '~getcitybyzip(oCompany.zip).name~' ('~oCompany.zip~')' }}</h6>
                     </div>
                 </div>
-
                 <!-- Footer proposant les liens de contact -->
                 <div class="card--footer-horizontal">
                     Contacter le pilote :
@@ -164,11 +163,13 @@
                     </a>
                 </div>
             </div>
+            <!-- ##### ^ FIN CARTE PILOTE ^ ##### -->
+
             {% endif %}
         {% endfor %}
         </div>
     {% else %}
-        <h5>Aucun pilote référencé ET "vérifié" pour l'heure...</h5>
+        <h5>Aucun pilote référencé ET "vérifié" pour l'heure dans ce département et/ou cette région...</h5>
     {% endif %}
 
 {% endif %}
