--- a/templates/flatrate/_form.html.twig
+++ b/templates/flatrate/_form.html.twig
@@ -1,8 +1,14 @@
-{% set depts=getdepartments() %}
+{% set regions=getregions() %}
 <section class="paragraph--large">
 
     <div class="d-flex flex-row flex-wrap justify-content-between align-items-center">
-        <h2 class="title--h2">Mise à jour d'un tarif...</h2>
+        <h2 class="title--h2">
+            {% if route=='flatrate_update' %}
+            Mise à jour d'un tarif...
+            {% elseif route=='flatrate_create' %}
+            Création d'un tarif...
+            {% endif %}
+        </h2>
         <div class="d-flex flex-row flex-wrap justify-content-between align-items-center">
             <a class="btn btn-sm btn--secondary" href="{{ path('admin_flatrate_read') }}">
                 <i class="ri-file-list-3-line"></i>&ensp;Retour à la liste
@@ -21,16 +27,34 @@
                 <th style="width:30%;"><label class="required" for="inputlabel">Libellé</label></th>
                 <th style="width:10%;"><label class="required" for="inputprice">Prix</label></th>
                 <th style="width:15%;"><label for="inputflatrate">Forfait (* PCI)</label></th>
-                <th style="width:25%;"><label for="claim_form_to_departments">Département</label></th>
+                <th style="width:25%;"><label class="required" for="claim_form_to_regions">Région</label></th>
+                <!-- <th style="width:25%;"><label for="claim_form_to_regions">Département</label></th> -->
                 <th style="width:15%;"><label>Actions</label></th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <form class="mt-4 mb-4" id="formupdate" method="post">
+                <form class="mt-4 mb-4" id="formupdate" method="post" novalidate>
                     <td></td>
-                    <td width="20%"><input type="text" class="form-control" id="inputlabel" value="{% if flatrate %}{{ flatrate.label }}{% endif %}" name="label" size="50" required/></td>
-                    <td><input type="text" class="form-control" id="inputprice" value="{% if flatrate %}{{ flatrate.price }}{% endif %}" name="price" size="5" required/></td>
+                    <td width="20%">
+                        <input type="text" class="form-control" id="inputlabel" value="{% if flatrate %}{{ flatrate.label }}{% elseif label is defined %}{{ label }}{% endif %}" name="label" size="50" required/>
+                        {% if error_label is defined and error_label is not null %}
+                        <span class="d-block">
+                            <small class="form-error-icon badge badge-danger text-uppercase">Error</small>
+                            <small class="form-error-message">Un libellé doit-être précisé</small>
+                        </span>
+                        {% endif %}
+                    </td>
+                    <td>
+                        <input type="text" class="form-control" id="inputprice"
+                            value="{% if flatrate %}{{ flatrate.price }}{% elseif price is defined %}{{ price }}{% endif %}" name="price" size="5" required/>
+                        {% if error_price is defined and error_price is not null %}
+                        <span class="d-block">
+                            <small class="form-error-icon badge badge-danger text-uppercase">Error</small>
+                            <small class="form-error-message">Un prix doit-être spécifié</small>
+                        </span>
+                        {% endif %}
+                    </td>
                     <td>
                         <div class="d-flex flex-row">
                             <div class="col-4"></div>
@@ -42,17 +66,16 @@
                         </div>
                     </td>
                     <td>
-                        {% if depts is defined and depts is not null %}
-                        <select class="form-control departments" id="claim_form_to_departments"
-                            name="department" title="departments"
+                        {% if regions is defined and regions is not null %}
+                        <select class="form-control regions" id="claim_form_to_regions"
+                            name="region" title="regions"
                         >
-                            <option value="" name="all">Tous</option>
-                            {% for dept in depts %}
-                            
-                            <option value="{{ dept.code }}" name="{{ dept.code }}" 
-                                {% if flatrate is defined and flatrate is not null and flatrate.departmentcode==dept.code %}selected="selected"{% endif %}
+                            <option value="" name="all">Toutes</option>
+                            {% for region in regions %}
+                            <option value="{{ region.code }}" name="{{ region.code }}" 
+                                {% if flatrate is defined and flatrate is not null and flatrate.regioncode==region.code %}selected="selected"{% endif %}
                             >
-                                {{ dept.name~' ('~dept.code~')' }}
+                            {{ region.name }}
                             </option>
                             {% endfor %}
                         </select>
