--- a/templates/mailer/confirmationregister.html.twig
+++ b/templates/mailer/confirmationregister.html.twig
@@ -8,10 +8,10 @@
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style> -->
 
-<div class="modal--big">
+<div class="modal--big pt-5">
     <!-- <div class="modal--content"> -->
 <!-- <div class="container example-wrapper mt-5"> -->
-        <h1> Courriel de validation de votre compte envoyé.</h1>
+        <h1 class="mt-5"> Courriel de validation de votre compte envoyé.</h1>
         <br><br>
         <h4>Merci de confirmer votre inscription en utilisant le lien contenu dans cet email.
             <br>
